Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -90,6 +90,7 @@
    ],
    "source": [
     "italy = countries[-3] # 'Italy'\n",
+    "Mexico = countries[3] # 'Italy'\n",
     "italy"
    ]
   },
