--- a/index.ipynb
+++ b/index.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -83,14 +83,15 @@
        "'Italy'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "italy = countries[-3] # 'Italy'\n",
-    "Mexico = countries[3] # 'Italy'\n",
+    "Mexico = countries[3] \n",
+    "Mexico\n",
     "italy"
    ]
   },
