Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -74,16 +74,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mexico\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "'Italy'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,7 +98,7 @@
    "source": [
     "italy = countries[-3] # 'Italy'\n",
     "Mexico = countries[3] \n",
-    "Mexico\n",
+    "print(Mexico)\n",
     "italy"
    ]
   },
