--- a/index.ipynb
+++ b/index.ipynb
@@ -99,7 +99,7 @@
     "italy = countries[-3] # 'Italy'\n",
     "Mexico = countries[3] \n",
     "print(Mexico)\n",
-    "italy"
+    "print(italy"
    ]
   },
   {
