Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -74,32 +74,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mexico\n"
+      "Mexico\n",
+      "Italy\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'Italy'"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "italy = countries[-3] # 'Italy'\n",
     "Mexico = countries[3] \n",
     "print(Mexico)\n",
-    "print(italy"
+    "print(italy)"
    ]
   },
   {
