--- a/index.ipynb
+++ b/index.ipynb
@@ -150,7 +150,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kindof_neighbors = None\n",
+    "kindof_neighbors = c\n",
     "kindof_neighbors"
    ]
   },
