Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -196,7 +196,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries.append(\"Thailand\")"
+    "countries.append(\"thailand\")"
    ]
   },
   {
