--- a/index.ipynb
+++ b/index.ipynb
@@ -209,7 +209,9 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -254,7 +256,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "None # add code here"
+    "countries"
    ]
   },
   {
