--- a/index.ipynb
+++ b/index.ipynb
@@ -319,7 +319,7 @@
     }
    ],
    "source": [
-    "countries.pop(\"Thailand\") # 'Thailand'"
+    "countries.pop() # 'Thailand'"
    ]
   },
   {
