--- a/index.ipynb
+++ b/index.ipynb
@@ -303,23 +303,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'builtin_function_or_method' object is not subscriptable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-21-c5b040233555>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mcountries\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpop\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"Thailand\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;31m# 'Thailand'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: 'builtin_function_or_method' object is not subscriptable"
-     ]
+     "data": {
+      "text/plain": [
+       "'USA'"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "countries.pop[\"Thailand\"] # 'Thailand'"
+    "countries.pop(6) # 'Thailand'"
    ]
   },
   {
